// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KPICard Component > renders with integer value correctly 1`] = `
<div>
  <div
    class="relative overflow-hidden group bg-white dark:bg-black border border-neutral-200 dark:border-white/10 rounded-sm p-6 hover:border-neutral-300 dark:hover:border-white/20 transition-colors duration-300"
  >
    <div
      class="flex items-start justify-between gap-4 relative z-10"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-[10px] font-mono font-bold text-slate-400 dark:text-white/40 uppercase tracking-[0.2em] mb-2"
        >
          交易次数
        </p>
        <div
          class="flex items-baseline gap-2"
        >
          <p
            class="text-3xl font-mono font-medium tracking-tighter transition-colors duration-200 text-slate-900 dark:text-white"
          >
            150
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with negative value correctly 1`] = `
<div>
  <div
    class="relative overflow-hidden group bg-white dark:bg-black border border-neutral-200 dark:border-white/10 rounded-sm p-6 hover:border-neutral-300 dark:hover:border-white/20 transition-colors duration-300"
  >
    <div
      class="flex items-start justify-between gap-4 relative z-10"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-[10px] font-mono font-bold text-slate-400 dark:text-white/40 uppercase tracking-[0.2em] mb-2"
        >
          今日盈亏
        </p>
        <div
          class="flex items-baseline gap-2"
        >
          <p
            class="text-3xl font-mono font-medium tracking-tighter transition-colors duration-200 text-red-600 dark:text-red-500"
          >
            -$1,234.56
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with percentage value correctly 1`] = `
<div>
  <div
    class="relative overflow-hidden group bg-white dark:bg-black border border-neutral-200 dark:border-white/10 rounded-sm p-6 hover:border-neutral-300 dark:hover:border-white/20 transition-colors duration-300"
  >
    <div
      class="flex items-start justify-between gap-4 relative z-10"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-[10px] font-mono font-bold text-slate-400 dark:text-white/40 uppercase tracking-[0.2em] mb-2"
        >
          胜率
        </p>
        <div
          class="flex items-baseline gap-2"
        >
          <p
            class="text-3xl font-mono font-medium tracking-tighter transition-colors duration-200 text-slate-900 dark:text-white"
          >
            68.5%
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with positive value correctly 1`] = `
<div>
  <div
    class="relative overflow-hidden group bg-white dark:bg-black border border-neutral-200 dark:border-white/10 rounded-sm p-6 hover:border-neutral-300 dark:hover:border-white/20 transition-colors duration-300"
  >
    <div
      class="flex items-start justify-between gap-4 relative z-10"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-[10px] font-mono font-bold text-slate-400 dark:text-white/40 uppercase tracking-[0.2em] mb-2"
        >
          总盈亏
        </p>
        <div
          class="flex items-baseline gap-2"
        >
          <p
            class="text-3xl font-mono font-medium tracking-tighter transition-colors duration-200 text-green-600 dark:text-green-500"
          >
            $12,345.67
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPICard Component > renders with subtitle correctly 1`] = `
<div>
  <div
    class="relative overflow-hidden group bg-white dark:bg-black border border-neutral-200 dark:border-white/10 rounded-sm p-6 hover:border-neutral-300 dark:hover:border-white/20 transition-colors duration-300"
  >
    <div
      class="flex items-start justify-between gap-4 relative z-10"
    >
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-[10px] font-mono font-bold text-slate-400 dark:text-white/40 uppercase tracking-[0.2em] mb-2"
        >
          加载中
        </p>
        <div
          class="flex items-baseline gap-2"
        >
          <p
            class="text-3xl font-mono font-medium tracking-tighter transition-colors duration-200 text-slate-900 dark:text-white"
          >
            --
          </p>
        </div>
        <p
          class="mt-2 text-xs font-mono text-slate-400 dark:text-white/30 truncate flex items-center gap-1"
        >
          Loading...
        </p>
      </div>
    </div>
  </div>
</div>
`;
